--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,6 +29,7 @@ subjects:
 - !lcsh 'Brazil -- History -- Empire, 1822-1889'
 - !lcc 'F2501'
 - !lcsh 'Brazil -- Foreign relations -- 1822-1889'
+- GITenberg
 title: 'Historia diplomatica do Brazil
 
   O Reconhecimento do Imperio'
